crates/cuda-macros/tests/compile_fail/cuda_module_reserved_from_parent.rs
// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

use cuda_macros::cuda_module;

#[cuda_module]
mod kernels {
    mod child {
        #[cuda_macros::kernel]
        pub fn from_parent() {}
    }
}

fn main() {}
